--- a/font/css.css
+++ b/font/css.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: 'Segoe UI';
-    src: url() format();
+    src: url('https://github.com/Aritra-dey/globalissues.github.io/edit/main/font/segoeui.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
