--- a/GLOBAL-ISSUES/GLOBAL ISSUES/about.css
+++ b/GLOBAL-ISSUES/GLOBAL ISSUES/about.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: 'Segoe UI';
-    src: url('https://github.com/Aritra-dey/globalissues.github.io/tree/main/font') format('truetype');
+    src: url('https://github.com/Aritra-dey/globalissues.github.io/font/segoeui.ttf') format('truetype');
 }
 .content h2{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
